[gd_scene load_steps=2 format=3 uid="uid://d3bjv071ybbpq"]

[ext_resource type="Script" path="res://scripts/ChatRoom.gd" id="1_rd41d"]

[node name="ChatRoom" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rd41d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "send"
